tests/semantic/fail/assignPointer2int.c
int main(void) {
  char *char_ptr;
  int i;
  i = char_ptr;
  return 0;
}
